--- a/source/api/_provider_accounts.html.md.erb
+++ b/source/api/_provider_accounts.html.md.erb
@@ -13,7 +13,7 @@ You must first create a Provider Account and can then add associated Providers a
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Get.new(url)
@@ -80,7 +80,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts")
 payload = {} # See payload tab
 
 http = Net::HTTP.new(url.host, url.port)
@@ -204,7 +204,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{id}?organization_id={organization_id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{id}?organization_id={organization_id}")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Get.new(url)
@@ -291,7 +291,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{id}?organization_id={organization_id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{id}?organization_id={organization_id}")
 payload = {} # See payload tab
 
 http = Net::HTTP.new(url.host, url.port)
@@ -416,7 +416,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{id}?organization_id={organization_id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{id}?organization_id={organization_id}")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Delete.new(url)
