--- a/source/webhooks.html.md.erb
+++ b/source/webhooks.html.md.erb
@@ -24,7 +24,7 @@ code_clipboard: true
 
 # Introduction 
 
-LIMS+: logical sample tracking, document and training record management 
+Documentation outlining all available Webhooks Ovation currently supports and their payload.
 
 **Version:** 1.0.0
 
