--- a/source/api/_provider_account_contacts.html.md.erb
+++ b/source/api/_provider_account_contacts.html.md.erb
@@ -8,7 +8,7 @@
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts")
 payload = {} # See payload tab
 
 http = Net::HTTP.new(url.host, url.port)
@@ -131,7 +131,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Get.new(url)
@@ -196,7 +196,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Get.new(url)
@@ -266,7 +266,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts/{id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts/{id}")
 payload = {} # See payload tab
 
 http = Net::HTTP.new(url.host, url.port)
@@ -388,7 +388,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts/{id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/provider_accounts/{provider_account_id}/provider_account_contacts/{id}")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Delete.new(url)
