--- a/source/api/_sales_groups.html.md.erb
+++ b/source/api/_sales_groups.html.md.erb
@@ -8,7 +8,7 @@
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/sales_groups")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/sales_groups")
 
 https = Net::HTTP.new(url.host, url.port)
 https.use_ssl = true
@@ -107,7 +107,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/sales_groups?organization_id={organization_id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/sales_groups?organization_id={organization_id}")
 
 https = Net::HTTP.new(url.host, url.port)
 https.use_ssl = true
@@ -165,7 +165,7 @@ require "uri"
 require "json"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/sales_groups/{id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/sales_groups/{id}")
 
 https = Net::HTTP.new(url.host, url.port)
 https.use_ssl = true
@@ -264,7 +264,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/sales_groups/{id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/sales_groups/{id}")
 
 https = Net::HTTP.new(url.host, url.port)
 https.use_ssl = true
@@ -325,7 +325,7 @@ puts response.read_body
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/sales_groups/{id}")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/sales_groups/{id}")
 
 https = Net::HTTP.new(url.host, url.port)
 https.use_ssl = true
