--- a/source/api/_test_panels.html.md.erb
+++ b/source/api/_test_panels.html.md.erb
@@ -8,7 +8,7 @@
 require "uri"
 require "net/http"
 
-url = URI("{api_endpoint}/api/v3/project_templates/{project_template_id}/test_panels")
+url = URI("<%= config[:api_env_endpoint] %>/api/v3/project_templates/{project_template_id}/test_panels")
 
 http = Net::HTTP.new(url.host, url.port)
 request = Net::HTTP::Get.new(url)
