--- a/source/api/_workflow_definitions.html.md.erb
+++ b/source/api/_workflow_definitions.html.md.erb
@@ -27,7 +27,7 @@
 require "uri"
 require "net/http"
 
-url = URI("https://lab-services.ovatio.io/api/v3/workflow_definitions?organizationId=1")
+url = URI("<%= config[:api_env_endpoint] %>/workflow_definitions?organizationId=1")
 
 http = Net::HTTP.new(url.host, url.port);
 request = Net::HTTP::Get.new(url)
