--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -32,6 +32,7 @@ apis:
 toc_footers:
   - <a href="/">APIs</a>
   - <a href="/webhooks">Webhooks</a>
+  - <a href="/hl7_docs">HL7</a>
 
 
 search: true
