--- a/source/webhooks.html.md.erb
+++ b/source/webhooks.html.md.erb
@@ -15,6 +15,7 @@ webhooks:
 toc_footers:
   - <a href="/">APIs</a>
   - <a href="/webhooks">Webhooks</a>
+  - <a href="/hl7_docs">HL7</a>
 
 search: true
 
