http method styles

--- a/source/api/_documents.html.md.erb
+++ b/source/api/_documents.html.md.erb
@@ -66,7 +66,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/documents`
+<span class="method get">GET</span>
+` /v3/documents`
 
 **Parameters**
 
@@ -139,7 +140,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`POST /v3/documents`
+<span class="method post">POST</span>
+` /v3/documents`
 
 **Parameters**
 
