--- a/source/api/_project_templates.html.md.erb
+++ b/source/api/_project_templates.html.md.erb
@@ -46,7 +46,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/project_templates`
+<span class="method get">GET</span>
+` /v3/project_templates`
 
 **Parameters**
 
