--- a/source/api/_provider_account_contacts.html.md.erb
+++ b/source/api/_provider_account_contacts.html.md.erb
@@ -88,7 +88,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`POST /v3/provider_accounts/{providerAccountId}/provider_account_contacts`
+<span class="method post">POST</span>
+` /v3/provider_accounts/{providerAccountId}/provider_account_contacts`
 
 **Parameters**
 
@@ -169,7 +170,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/provider_accounts/{providerAccountId}/provider_account_contacts`
+<span class="method get">GET</span>
+` /v3/provider_accounts/{providerAccountId}/provider_account_contacts`
 
 **Parameters**
 
@@ -242,7 +244,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/provider_accounts/{providerAccountId}/provider_account_contacts/{id}`
+<span class="method get">GET</span>
+` /v3/provider_accounts/{providerAccountId}/provider_account_contacts/{id}`
 
 **Parameters**
 
@@ -346,7 +349,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`PUT /v3/provider_accounts/{providerAccountId}/provider_account_contacts/{id}`
+<span class="method put">PUT</span>
+` /v3/provider_accounts/{providerAccountId}/provider_account_contacts/{id}`
 
 **Parameters**
 
@@ -382,7 +386,8 @@ puts response.read_body
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ### HTTP Request
-`DELETE /v3/provider_accounts/{providerAccountId}/provider_account_contacts/{id}`
+<span class="method delete">DELETE</span>
+` /v3/provider_accounts/{providerAccountId}/provider_account_contacts/{id}`
 
 ```ruby
 require "uri"
