--- a/source/api/_provider_accounts.html.md.erb
+++ b/source/api/_provider_accounts.html.md.erb
@@ -7,7 +7,8 @@ You must first create a Provider Account and can then add associated Providers a
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ### HTTP Request
-`GET /v3/provider_accounts`
+<span class="method get">GET</span>
+` /v3/provider_accounts`
 
 ```ruby
 require "uri"
@@ -74,7 +75,8 @@ puts response.read_body
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ### HTTP Request
-`POST /v3/provider_accounts`
+<span class="method post">POST</span>
+` /v3/provider_accounts`
 
 ```ruby
 require "uri"
@@ -198,7 +200,8 @@ puts response.read_body
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ### HTTP Request
-`GET /v3/provider_accounts/{id}`
+<span class="method get">GET</span>
+` /v3/provider_accounts/{id}`
 
 ```ruby
 require "uri"
@@ -285,7 +288,8 @@ puts response.read_body
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
 ### HTTP Request
-`PUT /v3/provider_accounts/{id}`
+<span class="method put">PUT</span>
+` /v3/provider_accounts/{id}`
 
 ```ruby
 require "uri"
