--- a/source/api/_reports.html.md.erb
+++ b/source/api/_reports.html.md.erb
@@ -3,8 +3,9 @@
 
 **Summary:** Update empty Report with content
 
-### HTTP Request 
-`PUT /v3/reports/{id}` 
+### HTTP Request
+<span class="method put">PUT</span>
+` /v3/reports/{id}`
 
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
