--- a/source/api/_requisitions.html.md.erb
+++ b/source/api/_requisitions.html.md.erb
@@ -63,7 +63,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/project_templates/{projectTemplateId}/requisitions`
+<span class="method get">GET</span>
+` /v3/project_templates/{projectTemplateId}/requisitions`
 
 **Parameters**
 
@@ -236,7 +237,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/project_templates/{projectTemplateId}/requisitions/{identifier}`
+<span class="method get">GET</span>
+` /v3/project_templates/{projectTemplateId}/requisitions/{identifier}`
 
 **Parameters**
 
@@ -516,6 +518,7 @@ puts response.read_body
 ```
 
 ### HTTP Request
+<span class="method post">POST</span>
 `POST /v3/project_templates/{projectTemplateId}/requisitions`
 
 **Parameters**
@@ -903,7 +906,8 @@ puts response.read_body
 
 
 ### HTTP Request
-`PUT /v3/project_templates/{projectTemplateId}/requisitions/{identifier}`
+<span class="method put">PUT</span>
+` /v3/project_templates/{projectTemplateId}/requisitions/{identifier}`
 
 **Parameters**
 
@@ -1052,7 +1056,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`DELETE /v3/project_templates/{projectTemplateId}/requisitions/{identifier}`
+<span class="method delete">DELETE</span>
+` /v3/project_templates/{projectTemplateId}/requisitions/{identifier}`
 
 **Parameters**
 
