--- a/source/api/_resources.html.md.erb
+++ b/source/api/_resources.html.md.erb
@@ -52,7 +52,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`POST /v3/resources`
+<span class="method post">POST</span>
+` /v3/resources`
 
 **Parameters**
 
