--- a/source/api/_sales_groups.html.md.erb
+++ b/source/api/_sales_groups.html.md.erb
@@ -65,7 +65,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`POST /v3/sales_groups`
+<span class="method post">POST</span>
+` /v3/sales_groups`
 
 **Parameters**
 
@@ -138,7 +139,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/sales_groups`
+<span class="method get">GET</span>
+` /v3/sales_groups`
 
 **Parameters**
 
@@ -222,7 +224,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`PUT /v3/sales_groups/{id}`
+<span class="method put">PUT</span>
+` /v3/sales_groups/{id}`
 
 **Parameters**
 
@@ -301,7 +304,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/sales_groups/{id}`
+<span class="method get">GET</span>
+` /v3/sales_groups/{id}`
 
 **Parameters**
 
@@ -347,7 +351,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`DELETE /v3/sales_groups/{id}`
+<span class="method delete">DELETE</span>
+` /v3/sales_groups/{id}`
 
 **Parameters**
 
