--- a/source/api/_sales_reps.html.md.erb
+++ b/source/api/_sales_reps.html.md.erb
@@ -48,7 +48,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`POST /v3/sales_reps`
+<span class="method post">POST</span>
+` /v3/sales_reps`
 
 **Parameters**
 
@@ -120,7 +121,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/sales_reps`
+<span class="method get">GET</span>
+` /v3/sales_reps`
 
 **Parameters**
 
@@ -174,7 +176,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/sales_reps/{id}`
+<span class="method get">GET</span>
+` /v3/sales_reps/{id}`
 
 **Parameters**
 
@@ -237,7 +240,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`PUT /v3/sales_reps/{id}`
+<span class="method put">PUT</span>
+` /v3/sales_reps/{id}`
 
 **Parameters**
 
@@ -294,7 +298,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`DELETE /v3/sales_reps/{id}`
+<span class="method delete">DELETE</span>
+` /v3/sales_reps/{id}`
 
 **Parameters**
 
