--- a/source/api/_sample_labels.html.md.erb
+++ b/source/api/_sample_labels.html.md.erb
@@ -32,7 +32,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/project_templates/{project_template_id}/sample_labels`
+<span class="method get">GET</span>
+` /v3/project_templates/{project_template_id}/sample_labels`
 
 **Parameters**
 
