--- a/source/api/_webhook_endpoint_events.html.md.erb
+++ b/source/api/_webhook_endpoint_events.html.md.erb
@@ -53,8 +53,9 @@ response = http.request(request)
 puts response.read_body
 ```
 
-### HTTP Request 
-`GET /v3/organizations/{organization_id}/webhook_endpoint_events`
+### HTTP Request
+<span class="method get">GET</span>
+` /v3/organizations/{organization_id}/webhook_endpoint_events`
 
 **Permissions**
 
@@ -114,7 +115,8 @@ puts response.read_body
 }
 ```
 
-### HTTP Request 
+### HTTP Request
+<span class="method post">POST</span>
 `POST /v3/organizations/{organization_id}/webhook_endpoint_events/retry_events`
 
 **Permissions**
