--- a/source/api/_workflow_definitions.html.md.erb
+++ b/source/api/_workflow_definitions.html.md.erb
@@ -3,8 +3,9 @@
 
 **Summary:** Get all Workflow Definitions for an Organization
 
-### HTTP Request 
-`GET /v3/workflow_definitions` 
+### HTTP Request
+<span class="method get">GET</span>
+` /v3/workflow_definitions`
 
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
