--- a/source/api/_admin_reports.html.md.erb
+++ b/source/api/_admin_reports.html.md.erb
@@ -3,8 +3,9 @@
 
 **Summary:** Get all Workflows and related data
 
-### HTTP Request 
-`GET /v3/admin_reports` 
+### HTTP Request
+<span class="method get">GET</span>
+` /v3/admin_reports`
 
 <%= partial "./partial_layouts/block_quotes.html.erb" %>
 
