--- a/source/api/_test_panels.html.md.erb
+++ b/source/api/_test_panels.html.md.erb
@@ -46,7 +46,8 @@ puts response.read_body
 ```
 
 ### HTTP Request
-`GET /v3/project_templates/{project_template_id}/test_panels`
+<span class="method get">GET</span>
+` /v3/project_templates/{project_template_id}/test_panels`
 
 **Parameters**
 
